--- a/FileKnight/FileKnight/FileKnight.csproj
+++ b/FileKnight/FileKnight/FileKnight.csproj
@@ -48,6 +48,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FileKnight.Core\FileKnight.Core.csproj">
+      <Project>{fff6d7b0-1528-42f2-bd01-4a9b703c196e}</Project>
+      <Name>FileKnight.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
