--- a/FileKnight/FileKnight.Core/FileKnight.Core.csproj
+++ b/FileKnight/FileKnight.Core/FileKnight.Core.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Hasher.cs" />
+    <Compile Include="Model\HashInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
