--- a/FileKnight/FileKnight.Core/FileKnight.Core.csproj
+++ b/FileKnight/FileKnight.Core/FileKnight.Core.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Hasher.cs" />
     <Compile Include="Model\HashInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringUtils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
