--- a/FileKnight/FileKnight.Core/FileKnight.Core.csproj
+++ b/FileKnight/FileKnight.Core/FileKnight.Core.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Hasher.cs" />
     <Compile Include="Model\HashInfo.cs" />
+    <Compile Include="Model\IEquatable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringUtils.cs" />
   </ItemGroup>
